<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sliding_layout"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/sliding_user_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/default_user_bg"
        android:layout_weight="0.9"
        >
        <view.CircleImageView
            android:id="@+id/sliding_user_img"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            app:border_color="#00000000"
            android:src="@drawable/logo1"/>
        <TextView
            android:id="@+id/sliding_user_name"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@id/sliding_user_img"
            android:gravity="center"
            android:text="默认用户"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#fff"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/sliding_user_signed"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@id/sliding_user_name"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:text="签名"
            android:singleLine="true"
            />
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/ic_more_vert_white_24dp"
            android:background="#0000"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="#23232b"
        android:orientation="horizontal"
        android:weightSum="3"
        android:paddingTop="10dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="发帖量"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/sliding_user_postNum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="40sp"
                android:text="15"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="关注的人"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/sliding_user_likeNum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="40sp"
                android:text="15"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="我的粉丝"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/sliding_user_fansNum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="40sp"
                android:text="15"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.7"
        android:background="@drawable/top_layout_shape"
        android:weightSum="7"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="10dp">
        <Button
            android:id="@+id/sliding_user_index_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#0000"
            android:drawableLeft="@drawable/icon_home_16dp"
            android:text="@string/slidingMenu_home"
            android:gravity="left|center_vertical"
            android:drawablePadding="18dp"
            android:textColor="@color/sliding_menu_textColor"
            android:textSize="17sp"
            />
        <Button
            android:id="@+id/sliding_user_msg_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#0000"
            android:drawableLeft="@drawable/icon_msg_16dp"
            android:text="@string/slidingMenu_msg"
            android:gravity="left|center_vertical"
            android:drawablePadding="18dp"
            android:textColor="@color/sliding_menu_textColor"
            android:textSize="17sp"
            />
        <Button
            android:id="@+id/sliding_user_notify_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#0000"
            android:drawableLeft="@drawable/icon_notification_16px"
            android:text="@string/slidingMenu_Notifi"
            android:gravity="left|center_vertical"
            android:drawablePadding="18dp"
            android:textColor="@color/sliding_menu_textColor"
            android:textSize="17sp"
            />
        <Button
            android:id="@+id/sliding_user_faxian_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#0000"
            android:drawableLeft="@drawable/icon_discover_16px"
            android:text="@string/slidingMenu_disc"
            android:gravity="left|center_vertical"
            android:drawablePadding="18dp"
            android:textColor="@color/sliding_menu_textColor"
            android:textSize="17sp"

            />
        <Button
            android:id="@+id/sliding_user_like_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#0000"
            android:drawableLeft="@drawable/icon_flover_16dp"
            android:text="@string/slidingMenu_favo"
            android:gravity="left|center_vertical"
            android:drawablePadding="18dp"
            android:textColor="@color/sliding_menu_textColor"
            android:textSize="17sp"
            />
        <Button
            android:id="@+id/sliding_user_retweet_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#0000"
            android:drawableLeft="@drawable/icon_trends_16px"
            android:text="@string/slidingMenu_trend"
            android:gravity="left|center_vertical"
            android:drawablePadding="18dp"
            android:textColor="@color/sliding_menu_textColor"
            android:textSize="17sp"
            />
        <Button
            android:id="@+id/sliding_user_setting_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#0000"
            android:drawableLeft="@drawable/icon_setting_16px"
            android:text="@string/slidingMenu_sett"
            android:gravity="left|center_vertical"
            android:drawablePadding="18dp"
            android:textColor="@color/sliding_menu_textColor"
            android:textSize="17sp"
            />
    </LinearLayout>
</LinearLayout>